@@ -1,3 +1,8 @@
+2003-05-16  Jakub Jelinek  <jakub@redhat.com>
+
+	* config/ia64/unwind-ia64.c (uw_update_reg_address): Handle
+	.save XX, r0.
+
 2001-10-31  Jakub Jelinek  <jakub@redhat.com>
 
 	* unwind-dw2-fde.c (fde_merge): Choose just one from FDEs for the
